[gd_scene load_steps=13 format=2]

[ext_resource path="res://ExampleBallGame/GameScene.gd" type="Script" id=1]
[ext_resource path="res://ExampleBallGame/Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/FreeSans48.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1000, 1000 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1000, 10000 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1000, 10000 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2000, 2000 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 96 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 50, 75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 320 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 960, 1000 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Ghost" type="Sprite" parent="Player"]
position = Vector2( 100, 0 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 3 )

[node name="Boundaries" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Ground"]
position = Vector2( 960, 2080 )
shape = SubResource( 2 )

[node name="Ceiling" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Ceiling"]
position = Vector2( 960, -9000 )
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftWall"]
position = Vector2( -1000, 540 )
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightWall"]
position = Vector2( 2920, 540 )
shape = SubResource( 4 )

[node name="Top" type="Area2D" parent="Boundaries"]
position = Vector2( 960, -2000 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Top"]
shape = SubResource( 8 )

[node name="Net" type="Node2D" parent="."]
position = Vector2( 275, 0 )

[node name="Rim" type="StaticBody2D" parent="Net"]
position = Vector2( 1296, 625 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net/Rim"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Net/Rim"]
scale = Vector2( 0.5, 3 )
texture = ExtResource( 3 )

[node name="Net" type="Area2D" parent="Net"]
position = Vector2( 1440, 625 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net/Net"]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Net/Net"]
self_modulate = Color( 1, 1, 1, 0.247059 )
scale = Vector2( 4, 3 )
texture = ExtResource( 3 )

[node name="Pole" type="StaticBody2D" parent="Net"]
position = Vector2( 1600, 760 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net/Pole"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Net/Pole"]
scale = Vector2( 1, 10 )
texture = ExtResource( 3 )

[node name="CursorCanvas" type="CanvasLayer" parent="."]

[node name="InterfaceCanvas" type="CanvasLayer" parent="."]
layer = 2

[node name="Score" type="Label" parent="InterfaceCanvas"]
margin_left = 32.0
margin_top = 128.0
margin_right = 207.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 4 )
text = "Score: 0"

[node name="BrainInputs" type="Label" parent="InterfaceCanvas"]
margin_left = 32.0
margin_top = 176.0
margin_right = 221.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 4 )
text = "Inputs: ..."

[node name="BrainOutputs" type="Label" parent="InterfaceCanvas"]
margin_left = 32.0
margin_top = 224.0
margin_right = 259.0
margin_bottom = 273.0
custom_fonts/font = ExtResource( 4 )
text = "Outputs: ..."

[node name="Balls" type="Node2D" parent="."]

[connection signal="body_entered" from="Net/Net" to="." method="_on_Net_body_entered"]
